@@ -546,7 +546,12 @@ public class ManageDocumentsService {
                         docData
                     ))
             );
-            newUploadedDocument = Document.buildFromDocument(uploadResponse.getDocuments().get(0));
+
+            if (uploadResponse == null || CollectionUtils.isEmpty(uploadResponse.getDocuments())) {
+                throw new IllegalStateException("Upload returned no documents for id: " + documentId);
+            }
+
+            newUploadedDocument = Document.buildFromDocument(uploadResponse.getDocuments().getFirst());
         } catch (Exception ex) {
             log.error("Failed to upload new document {}", ex.getMessage(), ex);
         }
